--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # Configurações para produção
-VITE_API_URL=https://api.verlyvidracaria.com/verly-service
+VITE_API_URL=https://verly-service-production.up.railway.app
