Fix API URL with correct context path /verly-service

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # Configurações para produção
-VITE_API_URL=https://verly-service-production.up.railway.app
+VITE_API_URL=https://verly-service-production.up.railway.app/verly-service
