fix: Corrige base path e URL da API para produção
- Adiciona CUSTOM_DOMAIN=true para usar base path '/'
- Corrige URL da API para incluir /verly-service

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Build application
         env:
           NODE_ENV: production
-          VITE_API_URL: https://api.verlyvidracaria.com
+          VITE_API_URL: https://api.verlyvidracaria.com/verly-service
+          CUSTOM_DOMAIN: true
         run: npm run build
         
       - name: Copy index.html to 404.html
